Added pro/con recommendations

--- a/React/public/index.html
+++ b/React/public/index.html
@@ -39,5 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <iframe src='https://webchat.botframework.com/embed/valeoqna-bot?s=WXlDlYHpt3o.MDFpyXV77MPSo3M6zS6-rkBlAtiiwa0zwLzWNSVD8_I'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
   </body>
 </html>
