--- a/React/public/index.html
+++ b/React/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="improve your market span!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -39,6 +39,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <iframe src='https://webchat.botframework.com/embed/valeoqna-bot?s=WXlDlYHpt3o.MDFpyXV77MPSo3M6zS6-rkBlAtiiwa0zwLzWNSVD8_I'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+    <h2>Talk to Valeo for tips, answers, and resources!</h2>
+    <iframe id="bot" src='https://webchat.botframework.com/embed/valeoqna-bot?s=WXlDlYHpt3o.MDFpyXV77MPSo3M6zS6-rkBlAtiiwa0zwLzWNSVD8_I'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
   </body>
 </html>
